# metasonic-brigde

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  hie.yaml  justfile  metasonic-bridge.cabal  package.yaml  stack.yaml
app/: Main.hs
app/MetaSonic/App/: CorpusSurvey.hs  Demos.hs  FusionCostLab.hs  FusionCostModel.hs  ManifestLiveCommon.hs  ManifestLiveIngressOps.hs  ManifestLivePolicy.hs  ManifestLiveReloadDemo.hs  ManifestLiveSession.hs  ManifestLiveValueCache.hs  ManifestMIDIIngressOps.hs  ManifestMIDIListener.hs  ManifestMIDIPortMIDI.hs  ManifestMIDIReloadSmoke.hs  ManifestOSCIngressOps.hs  ManifestOSCListener.hs  ManifestPreflightEvent.hs  ManifestReloadAudioEvent.hs  ManifestReloadBinding.hs  ManifestReloadCli.hs  ManifestReloadEvent.hs  ManifestReloadHost.hs  ManifestReloadHostStack.hs  ManifestReloadIngress.hs  ManifestReloadIngressTarget.hs  ManifestReloadMIDIBinding.hs  ManifestReloadMIDIIngress.hs  ManifestReloadOSCBinding.hs  ManifestReloadOSCIngress.hs  ManifestReloadOrchestration.hs  ManifestReloadPreservingHostStack.hs  ManifestReloadSupervisor.hs  ManifestReloadSupervisorAdapter.hs  ManifestReloadTryPreservingHostStack.hs  ManifestReloadUIIngress.hs  Osc.hs  ProfitabilityGate.hs  SessionMidiArbitrationSmoke.hs  SessionMidiSmoke.hs  SessionOscArbitrationSmoke.hs  (+4 more)
blog/: stack.yaml
blog/posts/: 2026-03-30-inside_q_lib_how_it_works.md  2026-04-15-tui-inspector.md
examples/manifests/: preserve-cutoff.json  preserve-smooth-cutoff.json  reject-preserving-delay.json  reject-preserving-smooth.json  saw-noise-filter.json
notes/: 2026-05-08-a-state-snapshot-phase-4d-complete.md  2026-05-08-app-main-split-recommendation.md  2026-05-08-b-deterministic-bus-reduction-design.md  2026-05-08-d-fusion-kernel-lessons.md  2026-05-08-deterministic-bus-reduction-design.md  2026-05-08-fusion-kernel-lessons.md  2026-05-08-fusion-strategy.md  2026-05-08-module-organization.md  2026-05-08-state-snapshot-phase-4d-complete.md  2026-05-09-a-phase-4e-worker-bench-interpretation.md  2026-05-09-b-phase-4e-worker-turn-on-decision.md  2026-05-09-c-worker-dispatch-lock-free-review.md  2026-05-09-d-phase-4e-c1d-region-layer-dispatch-design.md  2026-05-09-e-c1d-a-region-work-item-metadata-review.md  2026-05-09-phase-4e-worker-bench-interpretation.md  2026-05-09-phase-4e-worker-turn-on-decision.md  2026-05-09-worker-dispatch-lock-free-review.md  2026-05-10-a-phase-5-rcu-hot-swap-design.md  2026-05-10-b-phase-4-reasoning-and-work-summary.md  2026-05-10-c-phase-5-2-state-migration-design.md  2026-05-10-e-fusion-kernel-measurement-ab-tests.md  2026-05-10-g-phase-6a2-pattern-corpus-design.md  2026-05-10-h-phase-6a3-corpus-survey-baseline.md  2026-05-10-i-phase-6b-osc-design.md  2026-05-10-j-phase-6c-buffer-io-design.md  2026-05-10-k-phase-6c2-buffer-io-contract.md  2026-05-10-phase-4-reasoning-and-work-summary.md  2026-05-10-phase-5-2-state-migration-design.md  2026-05-10-phase-5-4-producer-identity-after-install-design.md  2026-05-10-phase-5-rcu-hot-swap-design.md  2026-05-10-phase-6a-pattern-design.md  2026-05-10-phase-6a2-pattern-corpus-design.md  2026-05-10-phase-6a3-corpus-survey-baseline.md  2026-05-10-phase-6b-osc-design.md  2026-05-10-phase-6c-buffer-io-design.md  2026-05-10-phase-6c2-buffer-io-contract.md  2026-05-11-a-phase-6c3b-lifetime-design.md  2026-05-11-b-phase-6c4-resource-ordering-design.md  2026-05-11-f-midi-osc-external-control.md  2026-05-11-g-state-snapshot-phase-6-complete.md  (+146 more)
notes/lembretes/: 2026-05-15-testar-manualmente.md
sc/: live-session-midi-values.scd  midi-test.scd
src/MetaSonic/: Authoring.hs  ControlTarget.hs  Pattern.hs  Types.hs
src/MetaSonic/Authoring/: Manifest.hs  Report.hs
src/MetaSonic/Bridge/: Buffer.hs  Compile.hs  FFI.hs  IR.hs  MidiDemo.hs  Planner.hs  Source.hs  Templates.hs  Validate.hs
src/MetaSonic/MIDI/: Devices.hs
src/MetaSonic/OSC/: Dispatch.hs  Listen.hs  Wire.hs
src/MetaSonic/Pattern/: Corpus.hs
src/MetaSonic/Session/: AdapterIssue.hs  Arbitration.hs  ArbitrationGateway.hs  Command.hs  FanIn.hs  FanInService.hs  Host.hs  MIDIListener.hs  MIDIPortMIDI.hs  MIDIProducer.hs  ManifestReload.hs  OSCListener.hs  OSCProducer.hs  Owner.hs  PatternProducer.hs  Queue.hs  RTGraphAdapter.hs  Report.hs  Resolve.hs  Runner.hs  Runtime.hs  State.hs  Step.hs  UIProducer.hs
src/MetaSonic/Visualize/: TUI.hs  Trace.hs
test/: Spec.hs
test/MetaSonic/Spec/: AppDemos.hs  AppFusionCostLab.hs  AppManifestLiveCommonAddressableSurface.hs  AppManifestLiveCommonIngressPolicy.hs  AppManifestLiveCommonMIDIRender.hs  AppManifestLiveCommonOSCControls.hs  AppManifestLiveCommonOSCRender.hs  AppManifestLiveCommonRetiredBindings.hs  AppManifestLiveCommonStaleByReload.hs  AppManifestLiveIngressOps.hs  AppManifestLivePolicy.hs  AppManifestLiveReloadDemoRender.hs  AppManifestLiveSession.hs  AppManifestLiveSessionOutputSink.hs  AppManifestLiveSessionProjectors.hs  AppManifestLiveValueCache.hs  AppManifestMIDIIngressOps.hs  AppManifestMIDIListener.hs  AppManifestMIDIPortMIDI.hs  AppManifestMIDIReloadE2E.hs  AppManifestOSCIngressOps.hs  (+30 more)
tests/: midi_demo_test.cpp  midi_voice_processor_test.cpp  q_midi_device_test.cpp  rt_graph_test.cpp  session_midi_source_test.cpp  voice_allocator_test.cpp
tinysynth/: midi_demo.cpp  midi_demo.h  midi_voice_processor.cpp  midi_voice_processor.h  q_midi_device.cpp  q_midi_stream.cpp  rt_graph.cpp  rt_graph.h  rt_graph_plugins.cpp  rt_graph_plugins.h  session_midi_source.cpp  session_midi_source.h  voice_allocator.cpp  voice_allocator.h
tinysynth/plugins/: identity.cpp  one_tap_delay.cpp
tinysynth/q_io/: midi_device.hpp
tools/: manifest_live_session_arbitration_gateway_smoke.sh  manifest_live_session_require_preserving_reject_smoke.sh  manifest_live_session_require_preserving_smoke.sh  manifest_supervised_live_smoke.sh  manifest_supervised_require_preserving_live_smoke.sh  manifest_supervised_try_preserving_live_smoke.sh  render_notes_html.sh  rt_graph_bench.cpp  rt_graph_smoke.cpp  run_live_session_pass.py  send_osc.py  test_send_osc.py
(+69 files in other folders)
